# brep_to_h5m

./: .gitignore  CITATION.cff  README.md  conda_build.sh  get_elements_in_pg.py  get_verts_and_faces_from_gmsh.py  get_verts_and_faces_from_gmsh_two_sep.py  method_using_gmshparser.py  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile
.github/workflows/: anaconda-publish.yml  ci_with_install.yml
brep_to_h5m/: __init__.py  core.py
conda/: meta.yaml
examples/: 1_make_geometry.py  2_convert_brep_to_h5m.py  3_check_dagmc_file_tags.py  4_run_openmc_simulation_with_dagmc.py
examples/ball_reactor/: 1_make_geometry_and_convert.py  2_run_openmc_simulation_with_dagmc.py
examples/csg_comparision/: make_voxel_plots.py  test_results_vs_csg.py
examples/cylinder_reactor/: 1_make_geometry.py  2_convert_brep_to_h5m.py  4_run_openmc_simulation_with_dagmc.py
examples/h5m_from_coords/: get_verticles_and_triangles_from_gmsh.py  make_h5m_from_coords.py  make_trimesh_then_h5m_from_coords.py  make_trimesh_then_h5m_from_mult_coords2.py  make_trimesh_then_h5m_from_multi_coords.py  test_h5m_with_openmc_simulation.py  test_openmc_simulation.py  trimesh_from_coords.py
src/brep_to_h5m/: core.py
tests/: create_brep_file_for_testing.py  test_brep_file.brep  test_h5m_in_transport.py  test_python_api.py  test_results_vs_csg.py  test_two_cubes.brep
