[build-system]
requires = ["setuptools >= 65.4.0", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "brep_to_h5m"
authors = [
  { name="Jonathan Shimwell", email="mail@jshimwell.com" },
]
license = {file = "LICENSE.txt"}
description = "Converts Brep CAD geometry files to h5m geometry files compatible with DAGMC simulations"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["dagmc", "geometry", "plot", "slice"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "trimesh",
    "networkx",
    "stl_to_h5m",
    "vertices_to_h5m",
]
dynamic = ["version"]


[tool.setuptools_scm]
write_to = "src/brep_to_h5m/_version.py"


[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "brep_part_finder",
    "dagmc_h5m_file_inspector",
    "openmc_data_downloader",
]

[project.urls]
"Homepage" = "https://github.com/fusion-energy/brep_to_h5m"
"Bug Tracker" = "https://github.com/fusion-energy/brep_to_h5m/issues"

[tool.setuptools]
package-dir = {"" = "src"}
