[metadata]
name = brep_to_h5m
author = The brep_to_h5m Development Team
author_email = mail@jshimwell.com
description = Converts Brep CAD geometry files to h5m geometry files compatible with DAGMC simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/brep_to_h5m
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/brep_to_h5m
    Tracker = https://github.com/fusion-energy/brep_to_h5m/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    trimesh
    brep_part_finder # requires cadquery which can be installed with conda
    networkx
    stl_to_h5m
    # gmsh # not avaialbe on pip but can be installed with conda or apt-get


[options.extras_require]
tests = 
    pytest >= 5.4.3
    # dagmc_h5m_file_inspector

[flake8]
per-file-ignores = __init__.py:F401
